--- a/Week 2/2 thetest.ipynb
+++ b/Week 2/2 thetest.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
     "        keras.layers.Flatten(),\n",
     "        keras.layers.Dense(128, \"relu\"),\n",
     "        keras.layers.Dense(64, \"relu\"),\n",
-    "        keras.layers.Dense(10)\n",
+    "        keras.layers.Dense(10, \"softmax\")\n",
     "    ]) \n",
     "    \n",
     "    # Compile the model\n",
@@ -115,36 +115,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10\n",
-      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.2403 - accuracy: 0.9295\n",
+      "Epoch 1/10\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Rhey\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\keras\\src\\backend.py:5714: UserWarning: \"`sparse_categorical_crossentropy` received `from_logits=True`, but the `output` argument was produced by a Softmax activation and thus does not represent logits. Was this intended?\n",
+      "  output, from_logits = _get_logits(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.2449 - accuracy: 0.9282\n",
       "Epoch 2/10\n",
-      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.1035 - accuracy: 0.9679\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.1033 - accuracy: 0.9690\n",
       "Epoch 3/10\n",
-      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.0719 - accuracy: 0.9778\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.0719 - accuracy: 0.9772\n",
       "Epoch 4/10\n",
-      "1875/1875 [==============================] - 3s 2ms/step - loss: 0.0554 - accuracy: 0.9828\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.0544 - accuracy: 0.9827\n",
       "Epoch 5/10\n",
-      "1875/1875 [==============================] - 3s 2ms/step - loss: 0.0421 - accuracy: 0.9861\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.0447 - accuracy: 0.9857\n",
       "Epoch 6/10\n",
-      "1875/1875 [==============================] - 3s 2ms/step - loss: 0.0356 - accuracy: 0.9883\n",
+      "1875/1875 [==============================] - 3s 2ms/step - loss: 0.0366 - accuracy: 0.9881\n",
       "Epoch 7/10\n",
-      "1875/1875 [==============================] - 3s 2ms/step - loss: 0.0291 - accuracy: 0.9906\n"
+      "1875/1875 [==============================] - 3s 2ms/step - loss: 0.0279 - accuracy: 0.9910\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.src.callbacks.History at 0x1a3fbcb4290>"
+       "<keras.src.callbacks.History at 0x1a3fc5dc290>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
