--- a/2 Convolutional Neural Networks in TensorFlow/Week 3/1 Transfer Learning - Horses vs Humans.ipynb
+++ b/2 Convolutional Neural Networks in TensorFlow/Week 3/1 Transfer Learning - Horses vs Humans.ipynb
@@ -24,7 +24,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# grader-required-cell\n",
+    "\n",
+    "# Define the training and validation base directories\n",
+    "train_dir = 'training'\n",
+    "validation_dir = 'validation'\n",
+    "\n",
+    "# Directory with training horse pictures\n",
+    "train_horses_dir = os.path.join(train_dir, 'horses')\n",
+    "# Directory with training humans pictures\n",
+    "train_humans_dir = os.path.join(train_dir, 'humans')\n",
+    "# Directory with validation horse pictures\n",
+    "validation_horses_dir = os.path.join(validation_dir, 'horses')\n",
+    "# Directory with validation human pictures\n",
+    "validation_humans_dir = os.path.join(validation_dir, 'humans')\n",
+    "\n",
+    "# Check the number of images for each class and set\n",
+    "print(f\"There are {len(os.listdir(train_horses_dir))} images of horses for training.\\n\")\n",
+    "print(f\"There are {len(os.listdir(train_humans_dir))} images of humans for training.\\n\")\n",
+    "print(f\"There are {len(os.listdir(validation_horses_dir))} images of horses for validation.\\n\")\n",
+    "print(f\"There are {len(os.listdir(validation_humans_dir))} images of humans for validation.\\n\")"
+   ]
   }
  ],
  "metadata": {
