--- a/3 natural-language-processing-tensorflow/Week 1/1 Explore the BBC News archive.ipynb
+++ b/3 natural-language-processing-tensorflow/Week 1/1 Explore the BBC News archive.ipynb
@@ -2,15 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "# grader-required-cell\n",
     "\n",
     "import csv\n",
-    "from tensorflow.keras.preprocessing.text import Tokenizer\n",
-    "from tensorflow.keras.preprocessing.sequence import pad_sequences"
+    "import tensorflow as tf\n",
+    "from tensorflow import keras\n",
+    "from keras.preprocessing.text import Tokenizer\n",
+    "from keras_preprocessing.sequence import pad_sequences"
    ]
   },
   {
@@ -98,41 +100,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "    # grader-required-cell\n",
+    "# grader-required-cell\n",
     "\n",
-    "    # GRADED FUNCTION: parse_data_from_file\n",
-    "    def parse_data_from_file(filename):\n",
-    "        \"\"\"\n",
-    "        Extracts sentences and labels from a CSV file\n",
-    "        \n",
-    "        Args:\n",
-    "            filename (string): path to the CSV file\n",
-    "        \n",
-    "        Returns:\n",
-    "            sentences, labels (list of string, list of string): tuple containing lists of sentences and labels\n",
-    "        \"\"\"\n",
-    "        sentences = []\n",
-    "        labels = []\n",
+    "# GRADED FUNCTION: parse_data_from_file\n",
+    "def parse_data_from_file(filename):\n",
+    "    \"\"\"\n",
+    "    Extracts sentences and labels from a CSV file\n",
+    "    \n",
+    "    Args:\n",
+    "        filename (string): path to the CSV file\n",
+    "    \n",
+    "    Returns:\n",
+    "        sentences, labels (list of string, list of string): tuple containing lists of sentences and labels\n",
+    "    \"\"\"\n",
+    "    sentences = []\n",
+    "    labels = []\n",
     "\n",
-    "        with open(filename, 'r') as csvfile:\n",
-    "            ### START CODE HERE\n",
-    "            reader = csv.reader(csvfile, delimiter=\",\")\n",
-    "            next(reader)\n",
+    "    with open(filename, 'r') as csvfile:\n",
+    "        ### START CODE HERE\n",
+    "        reader = csv.reader(csvfile, delimiter=\",\")\n",
+    "        next(reader)\n",
+    "        \n",
+    "        for i in reader:\n",
+    "            labels.append(i[0])\n",
+    "            sentences.append(remove_stopwords(i[1]))\n",
+    "\n",
     "            \n",
-    "            for i in reader:\n",
-    "                labels.append(i[0])\n",
-    "                sentences.append(i[1])\n",
-    "                \n",
-    "        return sentences, labels"
+    "    return sentences, labels"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +146,7 @@
       "\n",
       "There are 2225 sentences in the dataset.\n",
       "\n",
-      "First sentence has 737 words (after removing stopwords).\n",
+      "First sentence has 436 words (after removing stopwords).\n",
       "\n",
       "There are 2225 labels in the dataset.\n",
       "\n",
@@ -154,7 +157,7 @@
       "\n",
       "There are 5 sentences in the miniature dataset.\n",
       "\n",
-      "First sentence has 737 words (after removing stopwords).\n",
+      "First sentence has 436 words (after removing stopwords).\n",
       "\n",
       "There are 5 labels in the miniature dataset.\n",
       "\n",
@@ -184,6 +187,183 @@
     "print(f\"First sentence has {len(mini_sentences[0].split())} words (after removing stopwords).\\n\")\n",
     "print(f\"There are {len(mini_labels)} labels in the miniature dataset.\\n\")\n",
     "print(f\"The first 5 labels are {mini_labels[:5]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# grader-required-cell\n",
+    "\n",
+    "# GRADED FUNCTION: fit_tokenizer\n",
+    "def fit_tokenizer(sentences):\n",
+    "    \"\"\"\n",
+    "    Instantiates the Tokenizer class\n",
+    "    \n",
+    "    Args:\n",
+    "        sentences (list): lower-cased sentences without stopwords\n",
+    "    \n",
+    "    Returns:\n",
+    "        tokenizer (object): an instance of the Tokenizer class containing the word-index dictionary\n",
+    "    \"\"\"\n",
+    "    ### START CODE HERE\n",
+    "    # Instantiate the Tokenizer class by passing in the oov_token argument\n",
+    "    tokenizer = Tokenizer(oov_token=\"<OOV>\")\n",
+    "    tokenizer.fit_on_texts(sentences)\n",
+    "    # Fit on the sentences\n",
+    "    \n",
+    "    ### END CODE HERE\n",
+    "    return tokenizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vocabulary contains 29714 words\n",
+      "\n",
+      "<OOV> token included in vocabulary\n"
+     ]
+    }
+   ],
+   "source": [
+    "# grader-required-cell\n",
+    "\n",
+    "tokenizer = fit_tokenizer(sentences)\n",
+    "word_index = tokenizer.word_index\n",
+    "\n",
+    "print(f\"Vocabulary contains {len(word_index)} words\\n\")\n",
+    "print(\"<OOV> token included in vocabulary\" if \"<OOV>\" in word_index else \"<OOV> token NOT included in vocabulary\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# grader-required-cell\n",
+    "\n",
+    "# GRADED FUNCTION: get_padded_sequences\n",
+    "def get_padded_sequences(tokenizer, sentences):\n",
+    "    \"\"\"\n",
+    "    Generates an array of token sequences and pads them to the same length\n",
+    "    \n",
+    "    Args:\n",
+    "        tokenizer (object): Tokenizer instance containing the word-index dictionary\n",
+    "        sentences (list of string): list of sentences to tokenize and pad\n",
+    "    \n",
+    "    Returns:\n",
+    "        padded_sequences (array of int): tokenized sentences padded to the same length\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    ### START CODE HERE\n",
+    "    # Convert sentences to sequences\n",
+    "    sequences = tokenizer.texts_to_sequences(sentences)\n",
+    "    \n",
+    "    # Pad the sequences using the post padding strategy\n",
+    "    padded_sequences = pad_sequences(sequences)\n",
+    "    ### END CODE HERE\n",
+    "    \n",
+    "    return padded_sequences"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First padded sequence looks like this: \n",
+      "\n",
+      "[  0   0   0 ... 949  87  87]\n",
+      "\n",
+      "Numpy array of all sequences has shape: (2225, 2438)\n",
+      "\n",
+      "This means there are 2225 sequences in total and each one has a size of 2438\n"
+     ]
+    }
+   ],
+   "source": [
+    "# grader-required-cell\n",
+    "\n",
+    "padded_sequences = get_padded_sequences(tokenizer, sentences)\n",
+    "print(f\"First padded sequence looks like this: \\n\\n{padded_sequences[0]}\\n\")\n",
+    "print(f\"Numpy array of all sequences has shape: {padded_sequences.shape}\\n\")\n",
+    "print(f\"This means there are {padded_sequences.shape[0]} sequences in total and each one has a size of {padded_sequences.shape[1]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# grader-required-cell\n",
+    "\n",
+    "# GRADED FUNCTION: tokenize_labels\n",
+    "def tokenize_labels(labels):\n",
+    "    \"\"\"\n",
+    "    Tokenizes the labels\n",
+    "    \n",
+    "    Args:\n",
+    "        labels (list of string): labels to tokenize\n",
+    "    \n",
+    "    Returns:\n",
+    "        label_sequences, label_word_index (list of string, dictionary): tokenized labels and the word-index\n",
+    "    \"\"\"\n",
+    "    ### START CODE HERE\n",
+    "    \n",
+    "    # Instantiate the Tokenizer class\n",
+    "    # No need to pass additional arguments since you will be tokenizing the labels\n",
+    "    label_tokenizer = Tokenizer()\n",
+    "    \n",
+    "    label_tokenizer.fit_on_texts(labels)\n",
+    "    # Fit the tokenizer to the labels\n",
+    "\n",
+    "    # Save the word index\n",
+    "    label_word_index = label_tokenizer.word_index\n",
+    "    \n",
+    "    # Save the sequences\n",
+    "    label_sequences = label_tokenizer.texts_to_sequences(labels)\n",
+    "\n",
+    "    ### END CODE HERE\n",
+    "    \n",
+    "    return label_sequences, label_word_index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vocabulary of labels looks like this {'sport': 1, 'business': 2, 'politics': 3, 'tech': 4, 'entertainment': 5}\n",
+      "\n",
+      "First ten sequences [[4], [2], [1], [1], [5], [3], [3], [1], [1], [5]]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# grader-required-cell\n",
+    "\n",
+    "label_sequences, label_word_index = tokenize_labels(labels)\n",
+    "print(f\"Vocabulary of labels looks like this {label_word_index}\\n\")\n",
+    "print(f\"First ten sequences {label_sequences[:10]}\\n\")"
    ]
   }
  ],
