--- a/3 natural-language-processing-tensorflow/Week 4/1 Predicting next words.ipynb
+++ b/3 natural-language-processing-tensorflow/Week 4/1 Predicting next words.ipynb
@@ -532,7 +532,7 @@
     "    model = Sequential()\n",
     "    ### START CODE HERE\n",
     "    model.add(Embedding(total_words, 100, input_length=max_sequence_len-1))\n",
-    "    model.add(LSTM(128))\n",
+    "    model.add(Bidirectional(LSTM(128)))\n",
     "    model.add(Dense(total_words, activation=\"softmax\"))\n",
     "\n",
     "    # Compile the model\n",
